--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "packageManager": "pnpm@10.6.2",
   "dependencies": {
     "@astrojs/node": "^8.3.4",
+    "@astrojs/vercel": "^8.1.3",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
     "tailwindcss": "^4.0.14"
