--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "packageManager": "pnpm@10.6.2",
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.3",
     "@astrojs/node": "^8.3.4",
     "@astrojs/vercel": "^8.1.3",
     "@tailwindcss/vite": "^4.0.15",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.14.9",
     "astro": "^5.5.3",
     "tailwindcss": "^4.0.15"
   }
