--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,10 +2,7 @@ name: PR Build Check
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
-permissions:
-  pull-requests: write
-  issues: write
+    types: [opened]
   
 jobs:
   build:
@@ -14,14 +11,4 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Set up Node.js 
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build project
-      run: npm run build
+    - run: echo 'A review from octo-team was requested'
