--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,12 +2,11 @@ name: PR Build Check
 
 on:
   pull_request:
-    types: [open, openend, synchronize]
-  
+    types: [synchronize]
+
 jobs:
   build:
-    runs-on: ubuntu-latest
-
     steps:
-    - name: test
+    - name: Checkout code
+      uses: actions/checkout@v4
     - run: echo 'A review from octo-team was requested'
