--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,11 +2,10 @@ name: PR Build Check
 
 on:
   pull_request:
-    types: [synchronize]
-
+    types: [opened,synchronize]
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
     - run: echo 'A review from octo-team was requested'
