--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,12 @@ name: PR Build Check
 
 on:
   pull_request:
-    types: [opened,synchronize]
+    types: [opened, synchronize, reopened, ready_for_review]
+    
+permissions:
+  pull-requests: write
+  issues: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
