--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.3",
     "@astrojs/node": "^8.3.4",
+    "@astrojs/preact": "^4.0.7",
+    "@astrojs/react": "^4.2.2",
     "@astrojs/vercel": "^8.1.3",
     "@tailwindcss/vite": "^4.0.15",
     "@types/alpinejs": "^3.13.11",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "alpinejs": "^3.14.9",
     "astro": "^5.5.3",
+    "preact": "^10.26.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.0.15"
   }
 }
